# vxtwitter_discord_bot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: main.rs
