[package]
name = "discord_bot_hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "current" }
tokio = { version = "1.21.2", features = ["full"] }
dotenv = "0.15.0"